// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermissionsSummary should render correctly 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#f3f5f9",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#f3f5f9",
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "height": undefined,
          "justifyContent": "flex-start",
          "paddingTop": 16,
        },
        {
          "minHeight": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 16,
            }
          }
        />
        <View
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 10,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignContent": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 27,
                    "height": 54,
                    "justifyContent": "center",
                    "width": 54,
                  },
                  {
                    "borderRadius": 16,
                    "height": 32,
                    "width": 32,
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 24,
                      "fontWeight": "400",
                      "textAlign": "center",
                      "textTransform": "uppercase",
                    },
                    undefined,
                  ]
                }
              >
                a
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
              "flex": 1,
              "paddingRight": 16,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignSelf": "center",
            "marginBottom": 16,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 8,
          }
        }
        testID="permission-network-permissions-container"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Bold",
              "fontSize": 18,
              "fontWeight": "700",
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          app.uniswap.org has approval to:
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Connect this website with MetaMask
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            {
              "maxHeight": 262.5,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "borderRadius": 16,
                "marginHorizontal": 8,
                "marginTop": 8,
                "overflow": "hidden",
              }
            }
          >
            <RCTScrollView
              data={
                [
                  "eip155:0:0x2",
                ]
              }
              getItem={[Function]}
              getItemCount={[Function]}
              keyExtractor={[Function]}
              onContentSizeChange={[Function]}
              onLayout={[Function]}
              onMomentumScrollBegin={[Function]}
              onMomentumScrollEnd={[Function]}
              onScroll={[Function]}
              onScrollBeginDrag={[Function]}
              onScrollEndDrag={[Function]}
              removeClippedSubviews={false}
              renderItem={[Function]}
              scrollEnabled={false}
              scrollEventThrottle={0.0001}
              stickyHeaderIndices={[]}
              viewabilityConfigCallbackPairs={[]}
            >
              <View>
                <View
                  onFocusCapture={[Function]}
                  onLayout={[Function]}
                  style={null}
                >
                  <TouchableOpacity
                    avatarProps={
                      {
                        "accountAddress": "0x2",
                        "type": "Blockies",
                        "variant": "Account",
                      }
                    }
                    secondaryText="0x2...0x2"
                    showSecondaryTextIcon={false}
                    style={
                      {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#b7bbc8",
                        "borderRadius": 4,
                        "borderWidth": 0,
                        "height": 75,
                        "justifyContent": "center",
                        "padding": 16,
                      }
                    }
                    testID="celldisplay"
                  >
                    <View
                      style={
                        {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "borderRadius": 16,
                            "height": 32,
                            "marginRight": 16,
                            "overflow": "hidden",
                            "width": 32,
                          }
                        }
                        testID="cellbase-avatar"
                      >
                        <Image
                          source={
                            {
                              "uri": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAMAAAD04JH5AAAACVBMVEUwDw4dDQ2bgDR6jnYlAAAAA3RSTlP////6yOLMAABAi0lEQVR42gGAQH+/AAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAgICAgICAgICAgICAgICAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgICAgICAgICAgICAgICAgEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAQEBAQEBAQEBAQEBAQAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAQEBAQEBAQEBAQEBAQEBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBAQEBAQEBAQEBAQEBAQEAAAAAAAAAAAAAAAAAAAAAneggAZ70SzgAAAAASUVORK5CYII=",
                            }
                          }
                          style={
                            {
                              "flex": 1,
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-start",
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          numberOfLines={1}
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "CentraNo1-Book",
                              "fontSize": 16,
                              "fontWeight": "400",
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="cellbase-avatar-title"
                        />
                        <Text
                          accessibilityRole="text"
                          numberOfLines={1}
                          style={
                            {
                              "color": "#686e7d",
                              "fontFamily": "CentraNo1-Book",
                              "fontSize": 16,
                              "fontWeight": "400",
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                        >
                          0x2...0x2
                        </Text>
                      </View>
                      <View
                        style={
                          {
                            "marginLeft": 16,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "alignItems": "flex-end",
                              "flexDirection": "column",
                            }
                          }
                          testID="account-connected-item-0x2"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#121314",
                                "fontFamily": "CentraNo1-Book",
                                "fontSize": 16,
                                "fontWeight": "400",
                                "letterSpacing": 0,
                                "lineHeight": 24,
                                "textAlign": "right",
                              }
                            }
                          >
                            $3200
                          </Text>
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "marginLeft": 0,
                                }
                              }
                              testID="avatargroup-avatar-container-0"
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "backgroundColor": "#ffffff",
                                    "borderColor": "#ffffff",
                                    "borderRadius": 8,
                                    "borderWidth": 1.5,
                                    "height": 16,
                                    "justifyContent": "center",
                                    "overflow": "hidden",
                                    "width": 16,
                                  }
                                }
                                testID="avatargroup-avatar"
                              >
                                <Image
                                  onError={[Function]}
                                  resizeMode="contain"
                                  source={1}
                                  style={
                                    {
                                      "height": 16,
                                      "width": 16,
                                    }
                                  }
                                  testID="network-avatar-image"
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </TouchableOpacity>
                </View>
              </View>
            </RCTScrollView>
          </View>
          <TouchableOpacity
            onPress={[Function]}
            style={
              {
                "alignItems": "center",
                "marginTop": 8,
              }
            }
            testID="account-list-bottom-sheet"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#4459ff",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "marginTop": 8,
                }
              }
            >
              Edit accounts
            </Text>
          </TouchableOpacity>
        </View>
        <View
          navigation={
            {
              "goBack": [MockFunction],
            }
          }
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 16,
              "marginTop": 8,
              "paddingVertical": 8,
            }
          }
          tabLabel="Permissions"
        >
          <TouchableOpacity
            onPress={[Function]}
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 12,
                  "marginHorizontal": 24,
                  "marginTop": 8,
                }
              }
              testID="permission-summary-container"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#0000001a",
                    "borderRadius": 16,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "width": 32,
                  }
                }
              >
                <SvgMock
                  color="#686e7d"
                  fill="currentColor"
                  height={20}
                  name="Wallet"
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  width={20}
                />
              </View>
              <View
                style={
                  {
                    "flex": 1,
                    "marginLeft": 12,
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  See your accounts and suggest transactions
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 2,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "maxWidth": "75%",
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "CentraNo1-Book",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                      testID="permission-summary-account-text"
                    >
                      <Text
                        accessibilityRole="text"
                        style={
                          {
                            "color": "#121314",
                            "fontFamily": "CentraNo1-Book",
                            "fontSize": 14,
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 22,
                          }
                        }
                      >
                        Connected to  Account 2
                      </Text>
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "flexGrow": 1,
                        "marginLeft": 2,
                        "minWidth": "25%",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "marginLeft": 0,
                          }
                        }
                        testID="avatargroup-avatar-container-0"
                      >
                        <View
                          style={
                            {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#ffffff",
                              "borderRadius": 8,
                              "borderWidth": 1.5,
                              "height": 16,
                              "overflow": "hidden",
                              "width": 16,
                            }
                          }
                          testID="avatargroup-avatar"
                        >
                          <View
                            style={
                              [
                                {
                                  "overflow": "hidden",
                                },
                                {
                                  "backgroundColor": "#018C8C",
                                  "borderRadius": 8,
                                  "height": 16,
                                  "width": 16,
                                },
                                undefined,
                              ]
                            }
                          >
                            <RNSVGSvgView
                              bbHeight={16}
                              bbWidth={16}
                              focusable={false}
                              height={16}
                              style={
                                [
                                  {
                                    "backgroundColor": "transparent",
                                    "borderWidth": 0,
                                  },
                                  {
                                    "flex": 0,
                                    "height": 16,
                                    "width": 16,
                                  },
                                ]
                              }
                              width={16}
                            >
                              <RNSVGGroup
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                              >
                                <RNSVGRect
                                  fill={
                                    {
                                      "payload": 4291236946,
                                      "type": 0,
                                    }
                                  }
                                  height={16}
                                  matrix={
                                    [
                                      -0.8280603346224941,
                                      0.5606389945632423,
                                      -0.5606389945632423,
                                      -0.8280603346224941,
                                      21.77408503450534,
                                      8.916923243088606,
                                    ]
                                  }
                                  propList={
                                    [
                                      "fill",
                                    ]
                                  }
                                  width={16}
                                  x={0}
                                  y={0}
                                />
                                <RNSVGRect
                                  fill={
                                    {
                                      "payload": 4278407773,
                                      "type": 0,
                                    }
                                  }
                                  height={16}
                                  matrix={
                                    [
                                      -0.8589598969306643,
                                      -0.5120428648705717,
                                      0.5120428648705717,
                                      -0.8589598969306643,
                                      4.595805678182876,
                                      22.346674607701132,
                                    ]
                                  }
                                  propList={
                                    [
                                      "fill",
                                    ]
                                  }
                                  width={16}
                                  x={0}
                                  y={0}
                                />
                                <RNSVGRect
                                  fill={
                                    {
                                      "payload": 4294162688,
                                      "type": 0,
                                    }
                                  }
                                  height={16}
                                  matrix={
                                    [
                                      0.0558215049931637,
                                      -0.998440764181981,
                                      0.998440764181981,
                                      0.0558215049931637,
                                      -4.845722049995887,
                                      2.286408698531531,
                                    ]
                                  }
                                  propList={
                                    [
                                      "fill",
                                    ]
                                  }
                                  width={16}
                                  x={0}
                                  y={0}
                                />
                              </RNSVGGroup>
                            </RNSVGSvgView>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                testID="connection-details-button"
              >
                <SvgMock
                  color="#121314"
                  fill="currentColor"
                  height={20}
                  name="ArrowRight"
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  width={20}
                />
              </View>
            </View>
          </TouchableOpacity>
          <TouchableOpacity
            onPress={[Function]}
            testID="navigate_to_edit_networks_permissions_button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 16,
                  "marginHorizontal": 24,
                  "marginTop": 8,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#0000001a",
                    "borderRadius": 16,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "width": 32,
                  }
                }
              >
                <SvgMock
                  color="#686e7d"
                  fill="currentColor"
                  height={20}
                  name="Data"
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  width={20}
                />
              </View>
              <View
                style={
                  {
                    "flex": 1,
                    "marginLeft": 12,
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Use your enabled networks
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "marginRight": 4,
                        "maxWidth": "75%",
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "CentraNo1-Book",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      <Text
                        accessibilityRole="text"
                        style={
                          {
                            "color": "#121314",
                            "fontFamily": "CentraNo1-Book",
                            "fontSize": 14,
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 22,
                          }
                        }
                      >
                        Ethereum Mainnet
                      </Text>
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "flexGrow": 1,
                        "marginLeft": 2,
                        "minWidth": "25%",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "marginLeft": 0,
                          }
                        }
                        testID="avatargroup-avatar-container-0"
                      >
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "backgroundColor": "#ffffff",
                              "borderColor": "#ffffff",
                              "borderRadius": 8,
                              "borderWidth": 1.5,
                              "height": 16,
                              "justifyContent": "center",
                              "overflow": "hidden",
                              "width": 16,
                            }
                          }
                          testID="avatargroup-avatar"
                        >
                          <Image
                            onError={[Function]}
                            resizeMode="contain"
                            source={1}
                            style={
                              {
                                "height": 16,
                                "width": 16,
                              }
                            }
                            testID="network-avatar-image"
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                testID="connection-details-button"
              >
                <SvgMock
                  color="#121314"
                  fill="currentColor"
                  height={20}
                  name="ArrowRight"
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  width={20}
                />
              </View>
            </View>
          </TouchableOpacity>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 8,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "marginHorizontal": 24,
            "marginTop": 8,
          }
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderColor": "#ca3542",
              "borderRadius": 12,
              "borderWidth": 1,
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "paddingHorizontal": 16,
            }
          }
          testID="disconnect_all"
        >
          <SvgMock
            color="#ca3542"
            fill="currentColor"
            height={16}
            name="Logout"
            style={
              {
                "height": 16,
                "marginRight": 8,
                "width": 16,
              }
            }
            width={16}
          />
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ca3542",
                "fontFamily": "CentraNo1-Medium",
                "fontSize": 16,
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Disconnect all
          </Text>
        </TouchableOpacity>
      </View>
      <View
        style={
          {
            "flex": 0,
            "flexDirection": "row",
            "marginBottom": 0,
            "marginTop": 8,
            "paddingHorizontal": 16,
          }
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            [
              [
                {
                  "borderRadius": 100,
                  "justifyContent": "center",
                  "padding": 15,
                },
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#686e7d",
                  "borderWidth": 1,
                },
                [
                  {
                    "flex": 1,
                  },
                  {
                    "marginRight": 8,
                  },
                ],
              ],
              null,
            ]
          }
          testID="cancel-button"
        >
          <Text
            style={
              [
                {
                  "color": "#007aff",
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                null,
                [
                  {
                    "fontFamily": "CentraNo1-Bold",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "textAlign": "center",
                  },
                  {
                    "color": "#686e7d",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            Cancel
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={0.2}
          disabled={false}
          onPress={[Function]}
          style={
            [
              [
                {
                  "borderRadius": 100,
                  "justifyContent": "center",
                  "padding": 15,
                },
                {
                  "backgroundColor": "#4459ff",
                  "minHeight": 50,
                },
                [
                  {
                    "flex": 1,
                  },
                  {
                    "marginLeft": 8,
                  },
                ],
              ],
              null,
            ]
          }
          testID="connect-button"
        >
          <Text
            style={
              [
                {
                  "color": "#007aff",
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                null,
                [
                  {
                    "fontFamily": "CentraNo1-Bold",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "textAlign": "center",
                  },
                  {
                    "color": "#ffffff",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            Connect
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`PermissionsSummary should render correctly for network switch 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#f3f5f9",
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#f3f5f9",
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "height": undefined,
          "justifyContent": "flex-start",
          "paddingTop": 16,
        },
        {
          "minHeight": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 16,
            }
          }
        />
        <View
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 10,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignContent": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 27,
                    "height": 54,
                    "justifyContent": "center",
                    "width": 54,
                  },
                  {
                    "borderRadius": 16,
                    "height": 32,
                    "width": 32,
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 24,
                      "fontWeight": "400",
                      "textAlign": "center",
                      "textTransform": "uppercase",
                    },
                    undefined,
                  ]
                }
              >
                a
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
              "flex": 1,
              "paddingRight": 16,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignSelf": "center",
            "marginBottom": 16,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 8,
          }
        }
        testID="permission-network-permissions-container"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Bold",
              "fontSize": 18,
              "fontWeight": "700",
              "letterSpacing": 0,
              "lineHeight": 24,
              "textAlign": "center",
            }
          }
        >
          app.uniswap.org
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Connect this website with MetaMask
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
            "paddingHorizontal": 16,
          }
        }
      >
        <View
          style={
            {
              "maxHeight": 262.5,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "borderRadius": 16,
                "marginHorizontal": 8,
                "marginTop": 8,
                "overflow": "hidden",
              }
            }
          >
            <RCTScrollView
              data={[]}
              getItem={[Function]}
              getItemCount={[Function]}
              keyExtractor={[Function]}
              onContentSizeChange={[Function]}
              onLayout={[Function]}
              onMomentumScrollBegin={[Function]}
              onMomentumScrollEnd={[Function]}
              onScroll={[Function]}
              onScrollBeginDrag={[Function]}
              onScrollEndDrag={[Function]}
              removeClippedSubviews={false}
              renderItem={[Function]}
              scrollEnabled={false}
              scrollEventThrottle={0.0001}
              stickyHeaderIndices={[]}
              viewabilityConfigCallbackPairs={[]}
            >
              <View />
            </RCTScrollView>
          </View>
          <TouchableOpacity
            onPress={[Function]}
            style={
              {
                "alignItems": "center",
                "marginTop": 8,
              }
            }
            testID="account-list-bottom-sheet"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#4459ff",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                  "marginTop": 8,
                }
              }
            >
              Edit accounts
            </Text>
          </TouchableOpacity>
        </View>
        <View
          navigation={
            {
              "goBack": [MockFunction],
            }
          }
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 16,
              "marginTop": 8,
              "paddingVertical": 8,
            }
          }
          tabLabel="Permissions"
        >
          <TouchableOpacity
            onPress={[Function]}
            testID="navigate_to_edit_networks_permissions_button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 16,
                  "marginHorizontal": 24,
                  "marginTop": 8,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#0000001a",
                    "borderRadius": 16,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "width": 32,
                  }
                }
              >
                <SvgMock
                  color="#686e7d"
                  fill="currentColor"
                  height={20}
                  name="Data"
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  width={20}
                />
              </View>
              <View
                style={
                  {
                    "flex": 1,
                    "marginLeft": 12,
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Use your enabled networks
                </Text>
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "marginRight": 4,
                        "maxWidth": "75%",
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "CentraNo1-Book",
                          "fontSize": 16,
                          "fontWeight": "400",
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      <Text
                        accessibilityRole="text"
                        style={
                          {
                            "color": "#121314",
                            "fontFamily": "CentraNo1-Book",
                            "fontSize": 14,
                            "fontWeight": "400",
                            "letterSpacing": 0,
                            "lineHeight": 22,
                          }
                        }
                      >
                        Requesting for 
                      </Text>
                      <Text
                        accessibilityRole="text"
                        style={
                          {
                            "color": "#121314",
                            "fontFamily": "CentraNo1-Medium",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0,
                            "lineHeight": 22,
                          }
                        }
                      >
                        Sepolia
                      </Text>
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderRadius": 8,
                        "height": 16,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "width": 16,
                      }
                    }
                  >
                    <Image
                      onError={[Function]}
                      resizeMode="contain"
                      source={1}
                      style={
                        {
                          "height": 16,
                          "width": 16,
                        }
                      }
                      testID="network-avatar-image"
                    />
                  </View>
                </View>
              </View>
            </View>
          </TouchableOpacity>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 8,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "marginHorizontal": 24,
            "marginTop": 8,
          }
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderColor": "#ca3542",
              "borderRadius": 12,
              "borderWidth": 1,
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "paddingHorizontal": 16,
            }
          }
          testID="disconnect_all"
        >
          <SvgMock
            color="#ca3542"
            fill="currentColor"
            height={16}
            name="Logout"
            style={
              {
                "height": 16,
                "marginRight": 8,
                "width": 16,
              }
            }
            width={16}
          />
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#ca3542",
                "fontFamily": "CentraNo1-Medium",
                "fontSize": 16,
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Disconnect all
          </Text>
        </TouchableOpacity>
      </View>
      <View
        style={
          {
            "flex": 0,
            "flexDirection": "row",
            "marginBottom": 0,
            "marginTop": 8,
            "paddingHorizontal": 16,
          }
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            [
              [
                {
                  "borderRadius": 100,
                  "justifyContent": "center",
                  "padding": 15,
                },
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#686e7d",
                  "borderWidth": 1,
                },
                [
                  {
                    "flex": 1,
                  },
                  {
                    "marginRight": 8,
                  },
                ],
              ],
              null,
            ]
          }
          testID="cancel-button"
        >
          <Text
            style={
              [
                {
                  "color": "#007aff",
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                null,
                [
                  {
                    "fontFamily": "CentraNo1-Bold",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "textAlign": "center",
                  },
                  {
                    "color": "#686e7d",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            Cancel
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={0.2}
          disabled={false}
          onPress={[Function]}
          style={
            [
              [
                {
                  "borderRadius": 100,
                  "justifyContent": "center",
                  "padding": 15,
                },
                {
                  "backgroundColor": "#4459ff",
                  "minHeight": 50,
                },
                [
                  {
                    "flex": 1,
                  },
                  {
                    "marginLeft": 8,
                  },
                ],
              ],
              null,
            ]
          }
          testID="connect-button"
        >
          <Text
            style={
              [
                {
                  "color": "#007aff",
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                null,
                [
                  {
                    "fontFamily": "CentraNo1-Bold",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "textAlign": "center",
                  },
                  {
                    "color": "#ffffff",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            Confirm
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
